--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -17,30 +17,19 @@ possible by detailing all of the updates below.
 
 </PageDescription>
 
-<AnchorLinks>
-
-<AnchorLink>Changelog</AnchorLink>
-<AnchorLink>Components</AnchorLink>
-<AnchorLink>Styles</AnchorLink>
-<AnchorLink>Color Tokens</AnchorLink>
-<AnchorLink>Theming</AnchorLink>
-<AnchorLink>CSS Grid</AnchorLink>
-
-</AnchorLinks>
-
 ## Changelog
 
-| Feature                   | Status                           | Migrate                       | Packages or components impacted                                                         |
-| ------------------------- | -------------------------------- | ----------------------------- | --------------------------------------------------------------------------------------- |
-| `@carbon/react`           | <Tag type="cyan">Breaking</Tag>  | [Components](#components)     | `carbon-components-react` `carbon-icons` `carbon-components`                            |
-| `@carbon/styles`          | <Tag type="cyan">Breaking</Tag>  | [Styles](#styles)             | `carbon-components` `@carbon/react` `carbon-components-angular` `carbon-components-vue` |
-| Color Tokens              | <Tag type="cyan">Breaking</Tag>  | [Color tokens](#color-tokens) | All components                                                                          |
-| CSS Grid                  | <Tag type="cyan">Breaking</Tag>  | [CSS Grid](#css-grid)         | `@carbon/grid` `Grid` `Row` `Column`                                                    |
-| Layer Component           | <Tag type="cyan">Breaking</Tag>  | [Layering](#layer-component)  | Components using `light` prop                                                           |
-| Theme Component           | <Tag type="green">New</Tag>      | [Theming](#theme-component)   |                                                                                         |
-| `carbon-icons`            | <Tag type="red">Deprecated</Tag> | [Components](#components)     |                                                                                         |
-| `carbon-components`       | <Tag type="red">Deprecated</Tag> | [SASS Modules](#sass-modules) |                                                                                         |
-| `carbon-components-react` | <Tag type="red">Deprecated</Tag> | [Components](#components)     |                                                                                         |
+| Feature                   | Status                           | Migrate                                | Packages or components impacted                                                         |
+| ------------------------- | -------------------------------- | -------------------------------------- | --------------------------------------------------------------------------------------- |
+| `@carbon/react`           | <Tag type="cyan">Breaking</Tag>  | [Components](#components-breaking)     | `carbon-components-react` `carbon-icons` `carbon-components`                            |
+| `@carbon/styles`          | <Tag type="cyan">Breaking</Tag>  | [Styles](#styles-breaking)             | `carbon-components` `@carbon/react` `carbon-components-angular` `carbon-components-vue` |
+| Color Tokens              | <Tag type="cyan">Breaking</Tag>  | [Color tokens](#color-tokens-breaking) | All components                                                                          |
+| CSS Grid                  | <Tag type="cyan">Breaking</Tag>  | [CSS Grid](#css-grid-breaking)         | `@carbon/grid` `Grid` `Row` `Column`                                                    |
+| Layer Component           | <Tag type="cyan">Breaking</Tag>  | [Layering](#layer-component-breaking)  | Components using `light` prop                                                           |
+| Theme Component           | <Tag type="green">New</Tag>      | [Theming](#theme-component-new)        |                                                                                         |
+| `carbon-icons`            | <Tag type="red">Deprecated</Tag> | [Components](#components-breaking)     |                                                                                         |
+| `carbon-components`       | <Tag type="red">Deprecated</Tag> | [Styles](#styles-breaking)             |                                                                                         |
+| `carbon-components-react` | <Tag type="red">Deprecated</Tag> | [Components](#components-breaking)     |                                                                                         |
 
 <!-- to do: add rows for
 - component size props breaking changes
