fix: anchor links

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -17,6 +17,18 @@ possible by detailing all of the updates below.
 
 </PageDescription>
 
+<AnchorLinks>
+
+<AnchorLink>Changelog</AnchorLink>
+<AnchorLink to="#components-breaking">Components</AnchorLink>
+<AnchorLink to="#styles-breaking">Styles</AnchorLink>
+<AnchorLink to="#color-tokens-breaking">Color Tokens</AnchorLink>
+<AnchorLink to="#css-grid-breaking">CSS Grid</AnchorLink>
+<AnchorLink to="#layer-component-breaking">Layering</AnchorLink>
+<AnchorLink to="#theme-component-new">Theming</AnchorLink>
+
+</AnchorLinks>
+
 ## Changelog
 
 | Feature                   | Status                           | Migrate                                | Packages or components impacted                                                         |
