fix: grid resource card

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -382,10 +382,11 @@ Some usage guidelines to keep in mind when migrating are:
     <ResourceCard
       subTitle="CSS Grid storybook"
       href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-grid.md">
-      <MdxIcon name="React" />
+      <MdxIcon name="react" />
     </ResourceCard>
   </Column>
 </Row>
+<!-- to-do: link to live v11 storybook once we have it up!!!! -->
 
 ## Theming
 
