fix: more wording

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -266,9 +266,9 @@ team to team, so instead we're just going to highlight some of the big changes
 you need to keep in mind when tackling this transition.
 
 - If you are using a 3 column layout anywhere, we suggest talking to your design
-  team to decide on an alternate solution for 3 columns since we are no longer
-  supporting 12 columns. We realize this may be frustrating, but we hope the
-  other cool features we now support make it worth the change!
+  team to decide on an alternate layout since we are no longer supporting 12
+  columns. We realize this may be frustrating, but we hope the other cool
+  features we now support make it worth the change!
 - Use `Grid` component for subgrids.
 - `Row` component is deprecated. You can drop `Column` components directly into
   `Grid`, including nested grids.
