Color implementation tab (#2444)
* testing - pr

* testing-buttons

* docs(v11): color implementation tab

* 8 column images in tabs

* testing tab columns

* Fixed tabs

* Make tabs 8 columns

* update tabs to 8 column

* clean up

* adjust image sizes

* adjust images

* added inline theming

* Update implementation.mdx

* Update implementation.mdx

* inline theme imgs

* remove token list

* update image

* feedback from mike

* Apply suggestions from content review

Co-authored-by: jillianhowarth <jillianlovesdogs@gmail.com>

* Updates based on Josh's feedback

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: jillianhowarth <jillianlovesdogs@gmail.com>

--- a/src/pages/guidelines/color/usage.mdx
+++ b/src/pages/guidelines/color/usage.mdx
@@ -3,16 +3,20 @@ title: Color
 description:
   Maintaining consistent and engaging digital interfaces throughout IBM, whether
   applications or experiences, demands extended guidance around color usage.
-tabs: ['Overview', 'Usage', 'Code']
+tabs: ['Overview', 'Usage', 'Code', 'Implementation']
 ---
 
 import ColorTokenTable from 'components/ColorTokenTable';
 
+<InlineNotification>
+
+**Outdated content:** The tokens listed in the table are from v10 but will be
+updated soon. For now, check out
+[v11 elements](https://carbon-elements.netlify.app/themes/examples/preview-v11/)
+preview to see the v11 tokens and values.
+
+</InlineNotification>
+
 ## Tokens by theme
 
 <ColorTokenTable />
-
-## Color and accessibility
-
-Check out the [accessibility section](/guidelines/accessibility/color) for
-complete guidance on color and accessibility in Carbon.
