fix: overview dev resource card and apostrophes

--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -63,18 +63,16 @@ Whether you are a designer or a developer, we have curated guidance ready for
 you as your team makes their migration. Dive in and start using v11 right now!
 
 <Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-<ResourceCard
-	subTitle="I'm a designer: Get started"
-	href="/migrating/guide/design">
-
-</ResourceCard>
-<Column colLg={4} colMd={4} noGutterSm>
-<ResourceCard
-	subTitle="I'm a developer: Get started"
-	href="/migrating/guide/develop">
-
-</ResourceCard>
-</Column>
-</Column>
+   <Column colLg={4} colMd={4} noGutterSm>
+      <ResourceCard
+         subTitle="I’m a designer: Get started"
+         href="/migrating/guide/design">
+      </ResourceCard>
+   </Column>
+   <Column colLg={4} colMd={4} noGutterSm>
+      <ResourceCard
+         subTitle="I’m a developer: Get started"
+         href="/migrating/guide/develop">
+      </ResourceCard>
+   </Column>
 </Row>
