--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -13,7 +13,7 @@ and developers, and with no brand updates, no product redesigns are required.
 </PageDescription>
 
 To learn more about the v11 Beta Release head over to the
-[Migration overview](/migrating/guide/overview/) page.
+[Migration guide](/migrating/guide/overview/) page.
 
 ## Read
 
