fix(migration-docs): whats new link

--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -12,11 +12,8 @@ and developers, and with no brand updates, no product redesigns are required.
 
 </PageDescription>
 
-To learn more about the v11 Beta Release head over to the <<<<<<< HEAD
-[Migration guide overview](/migrating/guide/overview/) page. =======
-[Migration guide](/migrating/guide/overview/) page.
-
-> > > > > > > 911aa6307d4fb6719ecf3da2001454982fa5a8e5
+To learn more about the v11 Beta Release head over to the
+[Migration guide overview](/migrating/guide/overview/) page.
 
 ## Read
 
