fix: typo existing tokens

--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -37,7 +37,7 @@ use.
 
 - **APIs:** Size prop naming conventions have been updated to be consistent
   across all components.
-- **Color tokens:** Existing \*\*\*\*tokens have been renamed to better reflect
+- **Color tokens:** Existing tokens have been renamed to better reflect
   their usage and new tokens have been added to fill existing color token gaps
   in our system.
 - **Sass modules:** Carbon styles have been updated to use its own dedicated
