fix: overview develop get started link

--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -75,7 +75,7 @@ you as your team makes their migration. Dive in and start using v11 right now!
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
     subTitle="Developers: Get started"
-    href="/migrating/guide/design"
+    href="/migrating/guide/develop"
     actionIcon="arrowRight"
     >
 
