fix broken dataviz links

--- a/src/pages/data-visualization/chart-anatomy/index.mdx
+++ b/src/pages/data-visualization/chart-anatomy/index.mdx
@@ -69,7 +69,7 @@ should also reflect the main insight the data reveals. The legend should explain
 the chart’s meaning by defining the association of each visual property, such as
 color, shape, and size, to the corresponding data. When possible, use labels
 directly on the chart to avoid long legends. All the text should be concise and
-easy to understand. [Read more on legend usage.](../data-visualization/legends)
+easy to understand. [Read more on legend usage.](/data-visualization/legends)
 
 #### Tooltips
 
@@ -86,7 +86,7 @@ numbers. Axes, ticks, and the grid should help the reader understand the
 proportions and scale of the data, the indicators involved, and their unit of
 measure. Avoid filling the chart frame with too many elements, as it impacts the
 user’s ability to interpret the data.
-[Read more on axes usage.](../data-visualization/axes-and-labels)
+[Read more on axes usage.](/data-visualization/axes-and-labels)
 
 ## Circular charts
 
