fix(migration-docs): icons, design, table fixes

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -92,7 +92,7 @@ other depending on which one makes most sense to migrate to for your product.
 See Carbon's
 [color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/#tokens)
 and
-[color implementation](https://carbondesignsystem-git-fork-aagonza-f5b8b0-carbon-design-system.vercel.app/guidelines/color/implementation#layering-model-tokens)
+[color implementation](https://v11.carbondesignsystem.com/guidelines/color/overview)
 guidance for more information.
 
 <Row className="resource-card-group">
@@ -114,7 +114,7 @@ overrides. In product, a common use-case for inline theming is applying a
 contrasting theme to a UI shell and side panels.
 
 See Carbon's
-[inline theming](https://carbondesignsystem-git-fork-aagonza-f5b8b0-carbon-design-system.vercel.app/guidelines/color/implementation#inline-theming)
+[inline theming](https://v11.carbondesignsystem.com/guidelines/color/implementation#inline-theming)
 guidance for more information.
 
 ### Light or dark mode
@@ -125,5 +125,5 @@ The UI will automatically switch from using light color backgrounds with dark
 color text to using dark color backgrounds with light color text.
 
 See Carbon's
-[light or dark mode](https://carbondesignsystem-git-fork-aagonza-f5b8b0-carbon-design-system.vercel.app/guidelines/color/implementation#designing-for-light-or-dark-mode)
+[light or dark mode](https://v11.carbondesignsystem.com/guidelines/color/implementation#light-or-dark-mode)
 guidance for more information.
