--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -31,17 +31,17 @@ possible by detailing all of the updates below.
 
 ## Changelog
 
-| Feature                   | Status                           | Migrate                                | Packages or components impacted                                                         |
-| ------------------------- | -------------------------------- | -------------------------------------- | --------------------------------------------------------------------------------------- |
-| `@carbon/react`           | <Tag type="cyan">Breaking</Tag>  | [Components](#components-breaking)     | `carbon-components-react` `carbon-icons` `carbon-components`                            |
-| `@carbon/styles`          | <Tag type="cyan">Breaking</Tag>  | [Styles](#styles-breaking)             | `carbon-components` `@carbon/react` `carbon-components-angular` `carbon-components-vue` |
-| Color Tokens              | <Tag type="cyan">Breaking</Tag>  | [Color tokens](#color-tokens-breaking) | All components                                                                          |
-| CSS Grid                  | <Tag type="cyan">Breaking</Tag>  | [CSS Grid](#css-grid-breaking)         | `@carbon/grid` `Grid` `Row` `Column`                                                    |
-| Layer Component           | <Tag type="cyan">Breaking</Tag>  | [Layering](#layer-component-breaking)  | Components using `light` prop                                                           |
-| Theme Component           | <Tag type="green">New</Tag>      | [Theming](#theme-component-new)        |                                                                                         |
-| `carbon-icons`            | <Tag type="red">Deprecated</Tag> | [Components](#components-breaking)     |                                                                                         |
-| `carbon-components`       | <Tag type="red">Deprecated</Tag> | [Styles](#styles-breaking)             |                                                                                         |
-| `carbon-components-react` | <Tag type="red">Deprecated</Tag> | [Components](#components-breaking)     |                                                                                         |
+| Feature                   | <div style="width:100px">Status</div> | Migrate                                | Packages or components impacted                                                         |
+| ------------------------- | ------------------------------------- | -------------------------------------- | --------------------------------------------------------------------------------------- |
+| `@carbon/react`           | <Tag type="cyan">Breaking</Tag>       | [Components](#components-breaking)     | `carbon-components-react` `carbon-icons` `carbon-components`                            |
+| `@carbon/styles`          | <Tag type="cyan">Breaking</Tag>       | [Styles](#styles-breaking)             | `carbon-components` `@carbon/react` `carbon-components-angular` `carbon-components-vue` |
+| Color Tokens              | <Tag type="cyan">Breaking</Tag>       | [Color tokens](#color-tokens-breaking) | All components                                                                          |
+| CSS Grid                  | <Tag type="cyan">Breaking</Tag>       | [CSS Grid](#css-grid-breaking)         | `@carbon/grid` `Grid` `Row` `Column`                                                    |
+| Layer Component           | <Tag type="cyan">Breaking</Tag>       | [Layering](#layer-component-breaking)  | Components using `light` prop                                                           |
+| Theme Component           | <Tag type="green">New</Tag>           | [Theming](#theme-component-new)        |                                                                                         |
+| `carbon-icons`            | <Tag type="red">Deprecated</Tag>      | [Components](#components-breaking)     |                                                                                         |
+| `carbon-components`       | <Tag type="red">Deprecated</Tag>      | [Styles](#styles-breaking)             |                                                                                         |
+| `carbon-components-react` | <Tag type="red">Deprecated</Tag>      | [Components](#components-breaking)     |                                                                                         |
 
 <!-- to do: add rows for
 - component size props breaking changes
