--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -15,7 +15,7 @@ and developers, and with no brand updates, no product redesigns are required.
 To learn more about the v11 Beta Release head over to the
 [Migration guide overview](/migrating/guide/overview/) page.
 
-## Read
+## Read on Medium
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
@@ -44,7 +44,7 @@ To learn more about the v11 Beta Release head over to the
 </Column>
 </Row>
 
-## Watch
+## Watch the FEDucation
 
 As part of IBM's front-end developer educational series, FEDucation, Josh Black
 introduces the upcoming v11 release, its features, and how to get involved and
