--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -37,9 +37,9 @@ use.
 
 - **APIs:** Size prop naming conventions have been updated to be consistent
   across all components.
-- **Color tokens:** Existing tokens have been renamed to better reflect
-  their usage and new tokens have been added to fill existing color token gaps
-  in our system.
+- **Color tokens:** Existing tokens have been renamed to better reflect their
+  usage and new tokens have been added to fill existing color token gaps in our
+  system.
 - **Sass modules:** Carbon styles have been updated to use its own dedicated
   package and is transitioning to Sass modules.
 - **Theming:** New support for inline theming and light or dark modes.
@@ -65,19 +65,23 @@ you as your team makes their migration. Dive in and start using v11 right now!
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    subTitle="Designers: Get started"
+    subTitle="Designer migration"
     href="/migrating/guide/design"
     actionIcon="arrowRight"
     >
-      
+
+![Carbon icon](images/carbon.svg)
+
   </ResourceCard>
 </Column>
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
-    subTitle="Developers: Get started"
+    subTitle="Developer migration"
     href="/migrating/guide/develop"
     actionIcon="arrowRight"
     >
+
+![Carbon icon](images/carbon.svg)
 
   </ResourceCard>
 </Column>
