fix(migration-docs): notification on news page

--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -12,8 +12,10 @@ and developers, and with no brand updates, no product redesigns are required.
 
 </PageDescription>
 
-To learn more about the v11 Beta Release head over to the
-[Migration guide overview](/migrating/guide/overview/) page.
+<InlineNotification>
+  To learn more about the v11 Beta Release head over to the{' '}
+  <a href="/migrating/guide/overview/">Migration guide overview</a> page.
+</InlineNotification>
 
 ## Read on Medium
 
